--- a/src/static/index.html
+++ b/src/static/index.html
@@ -10,7 +10,30 @@
     <header>
       <h1>Mergington High School</h1>
       <h2>Extracurricular Activities</h2>
+      <div id="user-menu">
+        <button id="user-icon" class="user-icon" title="Login">👤</button>
+      </div>
     </header>
+
+    <!-- Login Modal -->
+    <div id="login-modal" class="modal hidden">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <h3>Teacher Login</h3>
+        <form id="login-form">
+          <div class="form-group">
+            <label for="username">Username:</label>
+            <input type="text" id="username" required />
+          </div>
+          <div class="form-group">
+            <label for="password">Password:</label>
+            <input type="password" id="password" required />
+          </div>
+          <button type="submit">Login</button>
+        </form>
+        <div id="login-message" class="hidden"></div>
+      </div>
+    </div>
 
     <main>
       <section id="activities-container">
@@ -23,6 +46,9 @@
 
       <section id="signup-container">
         <h3>Sign Up for an Activity</h3>
+        <div id="teacher-only-notice" class="info-notice hidden">
+          Only teachers can register and unregister students.
+        </div>
         <form id="signup-form">
           <div class="form-group">
             <label for="email">Student Email:</label>
